fix(checkbox): outline not visible when checked in high contrast mode (#18048)
Fixes checked checkboxes blending in with the background in high contrast mode. This is something that used to work, but might've regressed after we made `cdk-high-contrast` to generate a class selector which has a different specificity.

Also moves the checkbox high contrast styles into the main component styles so they don't have to be repeated for each theme.

--- a/src/material/checkbox/_checkbox-theme.scss
+++ b/src/material/checkbox/_checkbox-theme.scss
@@ -1,6 +1,5 @@
 @import '../core/theming/theming';
 @import '../core/typography/typography-utils';
-@import '../../cdk/a11y/a11y';
 
 
 @mixin mat-checkbox-theme($theme) {
@@ -34,12 +33,6 @@
     // !important is needed here because a stroke must be set as an
     // attribute on the SVG in order for line animation to work properly.
     stroke: $checkbox-mark-color !important;
-
-    @include cdk-high-contrast(black-on-white) {
-      // Having the one above be !important ends up overriding the browser's automatic
-      // color inversion so we need to re-invert it ourselves for black-on-white.
-      stroke: #000 !important;
-    }
   }
 
   .mat-checkbox-mixedmark {
@@ -76,19 +69,6 @@
 
     .mat-checkbox-label {
       color: mat-color($foreground, secondary-text);
-    }
-
-    @include cdk-high-contrast {
-      opacity: 0.5;
-    }
-  }
-
-  // This one is moved down here so it can target both
-  // the theme colors and the disabled state.
-  @include cdk-high-contrast {
-    .mat-checkbox-background {
-      // Needs to be removed because it hides the checkbox outline.
-      background: none;
     }
   }
 
